--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="container">
         <h4><b>Old website:</b></h4> 
         <p>The original LiveTerm website is accessible <a class="foot-link" href="https://oldsite-steamwolf.vercel.app/">here</a>.</p>
-        <p>Please note that it is no longer being updated, so the information may be outdated.</p>>
+        <p>Please note that it is no longer being updated, so the information may be outdated.</p>
       </div>
     </div>
     <hr>
