--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
           <a href="https://archiveofourown.org/users/SteamWolf" target="_blank"><img src="cards\ao3.png" alt="Ao3"></a>
         </div>
       </div>
+      <div class="column">
+        <div class="card" id="card">
+          <a href="https://steamwo1f.github.io/OOS/" target="_blank"><img src="cards\oo.png" alt="Optimized Oasis"></a>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card" id="card">
+          <a href="mailto:steamwolf.121.business@gmail.com" target="_blank"><img src="cards\email.png" alt="Email"></a>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card" id="card">
+          <a target="_blank" onclick="copyToClipboard('steamwolf:matrix.org')"><img src="cards\matrix.png" alt="Matrix"></a>
+        </div>
+      </div>
     </div>
     <hr>
     <h2>Tip Jar:</h2>
@@ -79,18 +94,6 @@
     <h2>More Info:</h2>
     <div class="card2">
       <div class="container">
-        <h3><b>Business email:</b></h3> 
-        <p><a class="card2-link" href="mailto:steamwolf.121.business@gmail.com">steamwolf.121.business@gmail.com</a></p>
-      </div>
-    </div>
-    <div class="card2">
-      <div class="container">
-        <h3><b>Matrix:</b></h3> 
-        <p>steamwolf:matrix.org</p>
-      </div>
-    </div>
-    <div class="card2">
-      <div class="container">
         <h4><b>Old website:</b></h4> 
         <p>The original LiveTerm website is accessible <a class="foot-link" href="https://oldsite-steamwolf.vercel.app/">here</a>.</p>
         <p>Please note that it is no longer being updated, so the information may be outdated.</p>
@@ -102,3 +105,13 @@
       <p class="foot">Read this sites source code <a href="https://github.com/SteamWo1f/website-v2" target="_blank" class="foot-link">here.</a></p>
     </footer>
 </body>
+<script>
+  function copyToClipboard(text) {
+    navigator.clipboard.writeText(text).then(function() {
+      alert('Copied Matrix info to clipboard');
+    })
+    .catch(function(error) {
+      console.error('Could not copy text: ', error);
+    });
+  }
+  </script>
