--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://archiveofourown.org/users/SteamWolf" target="_blank"><img src="cards\ao3.png" alt="Ao3"></a>
+          <a href="https://bsky.app/profile/steamwolf.bsky.social" target="_blank"><img src="cards\bluesky.png" alt="Bluesky"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://steamwo1f.github.io/OOS/" target="_blank"><img src="cards\oo.png" alt="Optimized Oasis"></a>
+          <a href="https://archiveofourown.org/users/SteamWolf" target="_blank"><img src="cards\ao3.png" alt="Ao3"></a>
         </div>
       </div>
       <div class="column">
@@ -94,8 +94,15 @@
     <h2>More Info:</h2>
     <div class="card2">
       <div class="container">
+        <img class="h2-img" src="cards/oo-banner.png"> 
+        <p>Optimized Oasis is a unique Minecraft modpack that I have been developing.</p>
+        <p>You can visit the official website <a href="https://steamwo1f.github.io/OOS/" class="foot-link">here</a> for more details.</p>
+      </div>
+    </div>
+    <div class="card2">
+      <div class="container">
         <h4><b>Old website:</b></h4> 
-        <p>The original LiveTerm website is accessible <a class="foot-link" href="https://oldsite-steamwolf.vercel.app/">here</a>.</p>
+        <p>The original LiveTerm website is accessible <a class="foot-link" target="_blank" href="https://oldsite-steamwolf.vercel.app/">here</a>.</p>
         <p>Please note that it is no longer being updated, so the information may be outdated.</p>
       </div>
     </div>
