fixed small bug

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="container">
         <img class="h2-img" src="cards/oo-banner.png"> 
         <p>Optimized Oasis is a unique Minecraft modpack that I have been developing.</p>
-        <p>You can visit the official website <a href="https://steamwo1f.github.io/OOS/" class="foot-link">here</a> for more details.</p>
+        <p>You can visit the official website <a href="https://steamwo1f.github.io/OOS/" class="foot-link" target="_blank">here</a> for more details.</p>
       </div>
     </div>
     <div class="card2">
