Added "& Audio" to header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <img class="h1-img" src="header.png">
     <hr>
-    <p>DJ | Photo & Video Editor | Developer | Beginner Video Producer | Creative Writer</p>
+    <p>DJ | Photo & Video Editor | Developer | Beginner Video & Audio Producer | Creative Writer</p>
     <hr>
     <h2>Links:</h2>
     <div class="row">
