png to svg header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="container">
-    <img class="h1-img" src="header.png">
+    <img class="h1-img" src="header.svg">
     <hr>
     <p>DJ | Photo & Video Editor | Developer | Beginner Video & Audio Producer | Creative Writer</p>
     <hr>
