Replaced png's with svg's along with ranlab info.

--- a/index.html
+++ b/index.html
@@ -17,62 +17,62 @@
     <div class="row">
       <div class="column">
         <div class="card" id="card">
-          <a href="https://github.com/SteamWo1f" target="_blank"><img src="cards\github.png" alt="GitHub"></a>
+          <a href="https://github.com/SteamWo1f" target="_blank"><img src="cards\github.svg" alt="GitHub"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://twitter.com/SteamWo1f" target="_blank"><img src="cards\twitter.png" alt="Twitter"></a>
+          <a href="https://twitter.com/SteamWo1f" target="_blank"><img src="cards\twitter.svg" alt="Twitter"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://www.youtube.com/@SteamWo1f" target="_blank"><img src="cards\youtube.png" alt="YouTube"></a>
+          <a href="https://www.youtube.com/@SteamWo1f" target="_blank"><img src="cards\youtube.svg" alt="YouTube"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://www.reddit.com/user/SteamWo1f" target="_blank"><img src="cards\reddit.png" alt="Reddit"></a>
+          <a href="https://www.reddit.com/user/SteamWo1f" target="_blank"><img src="cards\reddit.svg" alt="Reddit"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://www.tumblr.com/blog/steamwo1f" target="_blank"><img src="cards\tumblr.png" alt="Tumblr"></a>
+          <a href="https://steamwolf.bandcamp.com" target="_blank"><img src="cards\bandcamp.svg" alt="Bandcamp"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://www.linkedin.com/in/steamwolf" target="_blank"><img src="cards\linkedin.png" alt="LinkedIn"></a>
+          <a href="https://www.tumblr.com/blog/steamwo1f" target="_blank"><img src="cards\tumblr.svg" alt="Tumblr"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://steamwolf.bandcamp.com" target="_blank"><img src="cards\bandcamp.png" alt="Bandcamp"></a>
+          <a href="https://www.twitch.tv/steamwo1f" target="_blank"><img src="cards\twitch.svg" alt="Twitch"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://www.twitch.tv/steamwo1f" target="_blank"><img src="cards\twitch.png" alt="Twitch"></a>
+          <a href="https://bsky.app/profile/steamwolf.bsky.social" target="_blank"><img src="cards\bluesky.svg" alt="Bluesky"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://bsky.app/profile/steamwolf.bsky.social" target="_blank"><img src="cards\bluesky.png" alt="Bluesky"></a>
+          <a href="https://www.linkedin.com/in/steamwolf" target="_blank"><img src="cards\linkedin.svg" alt="LinkedIn"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://archiveofourown.org/users/SteamWolf" target="_blank"><img src="cards\ao3.png" alt="Ao3"></a>
+          <a href="https://archiveofourown.org/users/SteamWolf" target="_blank"><img src="cards\ao3.svg" alt="Ao3"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="mailto:steamwolf.121.business@gmail.com" target="_blank"><img src="cards\email.png" alt="Email"></a>
+          <a href="mailto:steamwolf.121.business@gmail.com" target="_blank"><img src="cards\email.svg" alt="Email"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a target="_blank" onclick="copyToClipboard('steamwolf:matrix.org')"><img src="cards\matrix.png" alt="Matrix"></a>
+          <a target="_blank" onclick="copyToClipboard('steamwolf:matrix.org')"><img src="cards\matrix.svg" alt="Matrix"></a>
         </div>
       </div>
     </div>
@@ -81,22 +81,29 @@
     <div class="row2">
       <div class="column">
         <div class="card" id="card">
-          <a href="https://ko-fi.com/steamwolf" target="_blank"><img src="cards\ko-fi.png" alt="Ko-Fi"></a>
+          <a href="https://ko-fi.com/steamwolf" target="_blank"><img src="cards\kofi.svg" alt="Ko-Fi"></a>
         </div>
       </div>
       <div class="column">
         <div class="card" id="card">
-          <a href="https://www.paypal.com/paypalme/SteamWo1f" target="_blank"><img src="cards\paypal.png" alt="PayPal"></a>
+          <a href="https://www.paypal.com/paypalme/SteamWo1f" target="_blank"><img src="cards\paypal.svg" alt="PayPal"></a>
         </div>
       </div>
     </div>
     <hr>
-    <h2>More Info:</h2>
+    <h2>Other Projects:</h2>
     <div class="card2">
       <div class="container">
         <img class="h2-img" src="cards/oo-banner.png"> 
         <p>Optimized Oasis is a unique Minecraft modpack that I have been developing.</p>
         <p>You can visit the official website <a href="https://steamwo1f.github.io/OOS/" class="foot-link" target="_blank">here</a> for more details.</p>
+      </div>
+    </div>
+    <div class="card2">
+      <div class="container">
+        <h4><b>ranlab:</b></h4> 
+        <p>A website that gives you a random link to a self hosted service from the <a href="https://github.com/awesome-selfhosted/awesome-selfhosted">Awesome-Selfhosted</a> readme.</p>
+        <p>Visit it <a href="https://steamwo1f.github.io/ranlab">here.</a></p>
       </div>
     </div>
     <div class="card2">
