small footer link fix

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
       <div class="container">
         <img class="h2-img" src="cards/oo-banner.png"> 
         <p>Optimized Oasis is a unique Minecraft modpack that I have been developing.</p>
-        <p>You can visit the official website <a href="https://steamwo1f.github.io/OOS/" class="foot-link" target="_blank">here</a> for more details.</p>
+        <p>You can visit the official website <a  href="https://steamwo1f.github.io/OOS/" class="foot-link" target="_blank">here</a> for more details.</p>
       </div>
     </div>
     <div class="card2">
       <div class="container">
         <h4><b>ranlab:</b></h4> 
-        <p>A website that gives you a random link to a self hosted service from the <a href="https://github.com/awesome-selfhosted/awesome-selfhosted">Awesome-Selfhosted</a> readme.</p>
-        <p>Visit it <a href="https://steamwo1f.github.io/ranlab">here.</a></p>
+        <p>A website that gives you a random link to a self hosted service from the <a class="foot-link" target="_blank" href="https://github.com/awesome-selfhosted/awesome-selfhosted">Awesome-Selfhosted</a> readme.</p>
+        <p>Visit it <a class="foot-link" target="_blank" href="https://steamwo1f.github.io/ranlab">here.</a></p>
       </div>
     </div>
     <div class="card2">
