--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <div class="container">
     <img class="h1-img" src="header.svg">
     <hr>
+    <p>!! This website is no longer being updated. Please visit the new website <a href="https://steamwolf.vercel.app" target="_blank">here</a> !!</p>
+    <hr>
     <p>DJ | Photo & Video Editor | Developer | Beginner Video & Audio Producer | Creative Writer</p>
     <hr>
     <h2>Links:</h2>
